src/main/webapp/less/main.less
/* ... */
.worm-render {
  background: none;
  border: none;
  box-shadow: none;
  margin-top: 5px;
}

.worm-render div {
  margin-top: 50%;
  color: black;
}

.bottom-buttons {
  display: table;
  margin: 0 auto;
  margin-top: -40px;
  position: relative;
}

.top-buttons {
  position: relative;
}

.plus-button {
  position: absolute;
  right: 90px;
  top: -30px;
}

.minus-button {
  position: absolute;
  right: 0px;
  top: 50px;
}

.round-button {
  width: 90px;
  height: 90px;
}

.round-button-multiplier {
  width: 130px;
  height: 130px;
}

.round-button-circle {
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  border-radius: 50%;
  border-color: #8f9c1b;
  border: 2px #8c9d22 solid;
  background: #d5f22d;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25), inset 0px 8px 5px #f7ff58, inset 0 -7px 5px rgba(100, 100, 100, 0.2), inset 0 5px 5px rgba(255, 255, 255, 0.3);
}

.round-button-circle:active,
.active-button {
  background: linear-gradient(#f8ffd2, #faff93);
  box-shadow: 0px 0px 0px #000000, inset 0px 6px 9px #bbc19f, inset 0px 0px 0px rgba(187, 193, 158, 0.2), inset 0px 4px 0px rgba(255, 255, 255, 0.3);
}

.round-button-circle span {
  display: block;
  float: left;
  width: 100%;
  padding-top: 50%;
  padding-bottom: 50%;
  line-height: 19px;
  margin-top: -10px;
  text-align: center;
  text-shadow: 0 1px 0 #666;
  color: black;
  font-family: helvetica_neueregular;
  font-size: 19px;
  letter-spacing: 1px;
  font-weight: bold;
  text-decoration: none;
}

.round-button-circle span:active {
  text-shadow: 0 0 1px #666;
}

.round-button-multiplier span {
  font-size: 60px;
  margin-top: -15px;
  font-weight: bold;
}

.rotated-text {
  top: 450px;
  position: absolute;
  margin-left: -85px;
  transform: rotate(270deg);
  transform-origin: left top 0;
}

#worm-name {
  font-family: alice_in_wonderlandregular;
  -webkit-text-stroke: 0.25px #fff;
  font-size: 35px;
  color: #029aee;
}

#worm-mm {
  font-family: helvetica_neueregular;
  font-size: 16px;
}

.length-bar {
  margin-left: -25px;
  position: absolute;
  width: 5px;
  background: #fff;
}

.worm-length{
	position: absolute;
	top: 50%;
	margin-top:-25px;
	width:5px;
	background: #029aee;
}

.sim-font {
  font-family: helvetica_neueregular;
  text-align: center;
  font-size: 32px;
}

.push-right {
  text-align: right;
  margin-top: 25px;
  margin-right: 10%;
}

.middle-text {
  margin-top: 120px;
  width: 90%;
  text-align: center;
  display: inline-block;
}

.buttons-container {
  margin-top: 50px;
}

.category-button {
  text-align: center;
  margin-bottom: 8px;
  width: 60%;
  background-color: #ffffff;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  border: 1px solid #dcdcdc;
  display: inline-block;
  cursor: pointer;
  color: #666666;
  font-family: helvetica_neueregular;
  font-size: 25px;
  font-weight: bold;
  padding: 5px 0;
  text-decoration: none;
  letter-spacing: 1px;
}

.category-button:hover {
  background-color: #f6f6f6;
}

.category-button:active {
  position: relative;
  top: 1px;
}
/*************************
HOME PAGE
*************************/
.main-container {
  height: 100%;
  position: absolute;
}

.the-worm {
  position: absolute;
  display: block;
  background-image: url(../images/worm.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: left center;
  height: 580px;
  width: 70%;
  top: 0;
  z-index: -10000;
}

.home-container {
  display: block;
  margin-bottom: 25px;
  text-align: center;
}

.home-font {
  font-family: helvetica_neueregular;
  text-align: center;
  font-size: 30px;
}

.green-span {
  font-family: helvetica_neueregular;
  font-weight: bold;
  text-align: center;
  font-size: 20px;
  color: #9fb522;
}

#logo-container {
  margin-top: 120px;
  text-align: center;
}

#youtube-player,
#player {
  margin-top: 120px;
  margin-bottom: 100px;
  margin: auto;
  text-align: center;
}

.openworm-logo {
  background-image: url(../images/openwormLogo.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  height: 110px;
  margin-bottom: 14px;
}

.wormsim-font {
  background-image: url(../images/wormsim-logo.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  width: 391px;
  height: 130px;
  margin: 0 auto;
}

@media
(-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi) {
    .wormsim-font {
   		background: url('../images/wormsim-logo@2x.png') no-repeat;
        background-size: 391px 130px;
    }
}

.play-button {
  background-image: url(../images/play-default.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  height: 50px;
  width: 50px;
  text-align: center;
  margin: auto;
  visibility: hidden;
}

.play-button:hover {
  background-image: url(../images/play-hover.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  height: 50px;
}

.input-wormsim {
  margin-left: 12%;
  font-family: helvetica_neueregular;
  font-weight: bold;
  text-align: left;
  display: block;
  width: 100%;
  height: 43px;
  padding: 7px 15px;
  font-size: 22px;
  line-height: 21px;
  color: #555;
  background-color: #fff;
  background-image: none;
  border: 3px solid #86980a;
  border-radius: 15px;
}

.green-button {
  text-align: center;
  margin-bottom: 8px;
  width: 150px;
  height: 43px;
  background-color: #d6f22d;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border: 3px solid #86980a;
  border-radius: 15px;
  display: inline-block;
  cursor: pointer;
  color: #666666;
  font-family: helvetica_neueregular;
  font-size: 22px;
  padding: 3px 15px;
  font-weight: bold;
  text-decoration: none;
  letter-spacing: 1px;
}

.green-button:active {
  position: relative;
  top: 2px;
}

.green-button:hover {
  color: #ffffff;
}

.login-button-fix {
  margin-top: 20px;
  margin-right: 20px;
}
/* ... */

